# KittyLoader

./: CMakeLists.txt  README.md
docker/: Dockerfile.linux  Dockerfile.windows
examples/: shellcode_encryptor.py
include/: api_resolver.h  crypto.h  evasion.h  memory.h  stealth_loader.h
scripts/: build.bat  build.sh  docker-build.sh  setup.ps1
src/: api_resolver.cpp  crypto.cpp  entry_hijack.asm  evasion.cpp  hijack.asm  main.cpp  memory.cpp  stealth_loader.cpp
